# SMTP

./: .gitignore  Cargo.toml  README.md
migrations/2026-03-07-110730-0000_create_mails/: down.sql  up.sql
src/: config.rs  error.rs  main.rs  models.rs  parser.rs  response.rs  schema.rs  session.rs  storage.rs  tls.rs
src/api/: mod.rs  routes.rs
