[package]
name = "SMTP"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
diesel = { version = "2.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "r2d2"] }
chrono = "0.4"
once_cell = "1.21.3"
dotenv = "0.15.0"
rustls = "0.23.37"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
password-hash = { version = "0.6.0", features = ["rand_core"] }
argon2 = "0.5.3"
rand = { version = "0.10.0", features = ["std"] }
axum = "0.8.8"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
